--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .home-header h1 {
-  color: #ff6b6b;
+  color: #2c72cd;
   font-size: 2.5rem;
 }
 
@@ -45,9 +45,11 @@
 }
 
 .home-footer {
-  margin-top: 30px;
+  background-color: #3da15f;
+  margin-top: 0px;
   font-size: 0.9rem;
   color: #2d2d2d;
+  text-align: center;
 }
 
 /* Auth Page Styles */
@@ -74,6 +76,7 @@
 
 .auth-button {
   padding: 10px;
+  margin: 8px 0;
   font-size: 1rem;
   background-color: #4caf50;
   color: white;
@@ -95,7 +98,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #ff6b6b;
+  background-color: #3da15f;
   padding: 10px 20px;
   color: white;
 }
