--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 
 body, .home-container {
   font-family: Arial, sans-serif;
-  background-color: #464070;
+  background-color: #f2f2f2;
 }
 
 button {
@@ -19,7 +19,7 @@ button {
 }
 
 .search-button {
-  background-color: #ff6b6b;
+  background-color: #2c72cd;
   color: white;
   border: none;
 }
